# electronic-diary

./: .env  .gitignore  README.md  db.sqlite3  pyproject.toml
dnevnik/: admin.py  apps.py  forms.py  middleware.py  models.py  service.py  urls.py  utils.py  views.py
dnevnik/migrations/: 0001_initial.py  0002_alter_score_date.py  0002_alter_user_age.py  0002_alter_user_profile.py  0003_alter_user_age.py  0003_alter_user_profile.py  0003_user_is_in_class.py  0004_alter_user_is_in_class.py  0004_auto_20210817_1340.py  0004_user_patronymic.py  0005_alter_profile_slug.py  0005_alter_score_managers.py  0005_alter_user_teacher.py  0006_alter_score_managers.py  0006_alter_user_managers.py  0006_auto_20210817_1415.py  0007_alter_user_managers.py  0007_alter_user_slug.py  0008_alter_user_slug.py  0008_auto_20210716_1359.py  0009_auto_20210716_1400.py  0010_user_teacher.py  0011_remove_user_teacher.py  0012_user_is_teacher.py  0013_alter_user_username.py  0014_user_last_visit.py  0015_alter_user_last_visit.py
mysite/: settings.py  urls.py
templates/dnevnik/: add_score.html  base.html  class_detail.html  classes_list.html  home_for_student.html  home_for_teacher.html  student_detail.html  subject_detail.html
templates/registration/: login.html
