[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Иван Патин"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
transliterate = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
