[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Иван Патин"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
transliterate = "^1.10.2"
django-reverse-admin = "^2.9.6"
django-debug-toolbar = "^3.2.2"
mimesis = "^4.1.3"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
